src/objects/Lcm_Version__c.object
<CustomObject>
    <description>Version eines Moduls für LCM</description>
    <fields>
        <fullName>Lcm_Description__c</fullName>
        <description>Beschreibung der Version</description>
        <inlineHelpText>Beschreibung der Version</inlineHelpText>
        <label>Bezeichnung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_ModuleName__c</fullName>
        <formula>Lcm_Module__r.Lcm_ModuleName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Modul-Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_Module__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Modul-Nr</label>
        <referenceTo>Lcm_Module__c</referenceTo>
        <relationshipLabel>Versionen</relationshipLabel>
        <relationshipName>Versionen</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lcm_State__c</fullName>
        <description>Status der Version</description>
        <inlineHelpText>Status der Version</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Geplant</fullName>
                </value>
                <value>
                    <fullName>In Entwicklung</fullName>
                </value>
                <value>
                    <fullName>In Test</fullName>
                </value>
                <value>
                    <fullName>Produktiv</fullName>
                </value>
                <value>
                    <fullName>Archiv</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lcm_TestSphere__c</fullName>
        <description>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</description>
        <inlineHelpText>Zuordnung zur jeweiligen Test-Sphere. Hilfefeld für die Freigabeeinstellung</inlineHelpText>
        <label>Lcm_TestSphere</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_VersionName__c</fullName>
        <description>Versionsname, meist ein Nummernsystem (1.0, 1.1, 2.0)</description>
        <inlineHelpText>Versionsname, meist ein Nummernsystem (1.0, 1.1, 2.0)</inlineHelpText>
        <label>Versions-Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Version</label>
    <listViews>
        <fullName>ADcalibur</fullName>
        <columns>Lcm_Module__c</columns>
        <columns>Lcm_ModuleName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Lcm_TestSphere__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_ModuleName__c</field>
            <operation>equals</operation>
            <value>SomDigNbt</value>
        </filters>
        <label>ADcalibur</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>Lcm_Module__c</columns>
        <columns>Lcm_ModuleName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Sales_Excellence</fullName>
        <columns>Lcm_Module__c</columns>
        <columns>Lcm_ModuleName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>Lcm_TestSphere__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_ModuleName__c</field>
            <operation>equals</operation>
            <value>Se</value>
        </filters>
        <label>Sales Excellence</label>
        <language>de</language>
    </listViews>
    <listViews>
        <fullName>Ventures</fullName>
        <columns>Lcm_Module__c</columns>
        <columns>Lcm_ModuleName__c</columns>
        <columns>NAME</columns>
        <columns>Lcm_VersionName__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_State__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Lcm_ModuleName__c</field>
            <operation>equals</operation>
            <value>Ventures</value>
        </filters>
        <label>Ventures</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>VE-{0000}</displayFormat>
        <label>Versions-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Versionen</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>